--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container df-c"></div>
-    <p class="checkbox__label">Select Langauges</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>checkbox_design</title>
+  </head>
+  <body>
+    <div class="container df-c">
+      <p class="checkbox__label">Select Langauges</p>
 
-    <div class="checkbox__container df-c">
-        <div class="checkbox__wrapper"></div>
+      <div class="checkbox__container df-c">
+        <div class="checkbox__wrapper">
+          <input type="checkbox" name="" id="" />
+          <div class="inner__wrapper"><p>Javascript</p></div>
+        </div>
+
+        <div class="checkbox__wrapper">
+          <input type="checkbox" name="" id="" />
+          <div class="inner__wrapper"><p>Python</p></div>
+        </div>
+
+        <div class="checkbox__wrapper">
+          <input type="checkbox" name="" id="" />
+          <div class="inner__wrapper"><p>Java</p></div>
+        </div>
+
+        <div class="checkbox__wrapper">
+          <input type="checkbox" name="" id="" />
+          <div class="inner__wrapper"><p>C</p></div>
+        </div>
+
+        <div class="checkbox__wrapper">
+          <input type="checkbox" name="" id="" />
+          <div class="inner__wrapper"><p>React</p></div>
+        </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
